# Projects1

./: CMakeLists.txt  README.md  config.h  pictures.h  weather.cpp
archivator/: archive.cpp  archive.h  decoding_hamming.cpp  decoding_hamming.h  hamming.cpp  hamming.h
